--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,7 +7,7 @@
 
 .bar.bar-stable {
   height: 60px;
-  @include background-horizontal($light-blue, $light-green, $light-blue);
+  @include background-horizontal($dark-blue, $light-green, $dark-blue);
   .title {
     height: 60px;
     line-height: 60px;
@@ -15,12 +15,11 @@
     font-size: 22px;
   }
   .buttons-right {
+    margin: 0;
     .list-grid-toggle {
-      width: 52px;
-      height: 52px;
-      padding: 10px 5px;
-      background: rgba(0, 0, 0, .2);
-      border-radius: 50%;
+      display: inline-block;
+      margin: 0;
+      padding: 0;
       color: $light;
       font-size: 12px;
       font-weight: 200;
@@ -28,52 +27,57 @@
       text-align: center;
       text-shadow: 2px 2px 4px shade($teal, 20%);
       text-transform: uppercase;
-      transition: all 0.15s ease;
+      @include transition(all .15s ease 0s);
       user-select: none;
       &:hover {
-        /*padding: 15px;*/
         background: shade($teal, 10%);
       }
     }
-    .icon {
-      width: 40px;
-      margin-bottom: 10px;
-    }
-    .icon-bar {
-      position: relative;
-      width: 25px;
-      height: 4px;
-      margin: 0 auto 4px auto;
-      background: $light;
-      box-shadow: 2px 2px 4px shade($teal, 20%);
-      transition: all 0.15s ease;
-      &:last-child {
-        margin-bottom: 0;
+    .icon { /* .button */
+      display: inline-block;
+      height: auto;
+      width: 35px;
+      margin: 9px 10px 0 0;
+      padding: 0;
+      border: none;
+      background-color: transparent;
+      &::before,
+      &::after {
+        display: none;
       }
-      &:before,
-      &:after {
-        position: absolute;
-        display: block;
-        width: 5px;
-        height: 4px;
-        background: $light;
-        box-shadow: 2px 2px 4px (shade($teal, 20%));
-        content: '';
-        opacity: 0;
-        transition: all 0.15s ease;
-      }
-      /*&:before {
-        left: -12px;
-      }
-      &:after {
-        right: -12px;
-      }*/
-    }
-    .grid-icon {
       .icon-bar {
-        width: 5px;
+        position: relative;
+        float: left;
+        height: 4px;
+        width: 100%;
+        margin: 0 0 7px;
+        background: $light;
+        @inlclude transition(all .15s ease 0s);
         &:before,
         &:after {
+          position: absolute;
+          display: block;
+          width: 8px;
+          height: 4px;
+          background: $light;
+          box-shadow: 2px 2px 4px (shade($teal, 20%));
+          content: '';
+          opacity: 0;
+          transition: all 0.15s ease;
+        }
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .grid-icon {
+      width: 8px;
+      margin-right: 25px;
+      .icon-bar {
+        &:before,
+        &:after {
+          margin: 0 -5px;
           opacity: 1;
         }
         &:before {
@@ -84,14 +88,6 @@
           right: 0;
           @include transform(translateX(8px));
         }
-      }
-    }
-    .button {
-      border: none;
-      background-color: transparent;
-      &::before,
-      &::after {
-        display: none;
       }
     }
   }
