--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9866,80 +9866,79 @@ a.button {
  */
 .bar.bar-stable {
   height: 60px;
-  background: #4081BF;
-  background: -webkit-linear-gradient(left, #4081BF 0%, #40A6BF 50%, #4081BF 100%);
-  background: -moz-linear-gradient(left, #4081BF 0%, #40A6BF 50%, #4081BF 100%);
-  background: linear-gradient(to right, #4081BF 0%, #40A6BF 50%, #4081BF 100%);
+  background: #1B3255;
+  background: -webkit-linear-gradient(left, #1B3255 0%, #40A6BF 50%, #1B3255 100%);
+  background: -moz-linear-gradient(left, #1B3255 0%, #40A6BF 50%, #1B3255 100%);
+  background: linear-gradient(to right, #1B3255 0%, #40A6BF 50%, #1B3255 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$left', endColorstr='$right',GradientType=0); }
   .bar.bar-stable .title {
     height: 60px;
     line-height: 60px;
     color: #fff;
     font-size: 22px; }
-  .bar.bar-stable .buttons-right .list-grid-toggle {
-    width: 52px;
-    height: 52px;
-    padding: 10px 5px;
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 50%;
-    color: #fff;
-    font-size: 12px;
-    font-weight: 200;
-    letter-spacing: 3px;
-    text-align: center;
-    text-shadow: 2px 2px 4px shade(#16a085, 20%);
-    text-transform: uppercase;
-    transition: all 0.15s ease;
-    user-select: none; }
-    .bar.bar-stable .buttons-right .list-grid-toggle:hover {
-      /*padding: 15px;*/
-      background: shade(#16a085, 10%); }
-  .bar.bar-stable .buttons-right .icon {
-    width: 40px;
-    margin-bottom: 10px; }
-  .bar.bar-stable .buttons-right .icon-bar {
-    position: relative;
-    width: 25px;
-    height: 4px;
-    margin: 0 auto 4px auto;
-    background: #fff;
-    box-shadow: 2px 2px 4px shade(#16a085, 20%);
-    transition: all 0.15s ease;
-    /*&:before {
-        left: -12px;
-      }
-      &:after {
-        right: -12px;
-      }*/ }
-    .bar.bar-stable .buttons-right .icon-bar:last-child {
-      margin-bottom: 0; }
-    .bar.bar-stable .buttons-right .icon-bar:before, .bar.bar-stable .buttons-right .icon-bar:after {
-      position: absolute;
-      display: block;
-      width: 5px;
-      height: 4px;
-      background: #fff;
-      box-shadow: 2px 2px 4px shade(#16a085, 20%);
-      content: '';
-      opacity: 0;
-      transition: all 0.15s ease; }
-  .bar.bar-stable .buttons-right .grid-icon .icon-bar {
-    width: 5px; }
-    .bar.bar-stable .buttons-right .grid-icon .icon-bar:before, .bar.bar-stable .buttons-right .grid-icon .icon-bar:after {
-      opacity: 1; }
-    .bar.bar-stable .buttons-right .grid-icon .icon-bar:before {
-      left: 0;
-      -webkit-transform: translateX(-8px);
-      transform: translateX(-8px); }
-    .bar.bar-stable .buttons-right .grid-icon .icon-bar:after {
-      right: 0;
-      -webkit-transform: translateX(8px);
-      transform: translateX(8px); }
-  .bar.bar-stable .buttons-right .button {
-    border: none;
-    background-color: transparent; }
-    .bar.bar-stable .buttons-right .button::before, .bar.bar-stable .buttons-right .button::after {
-      display: none; }
+  .bar.bar-stable .buttons-right {
+    margin: 0; }
+    .bar.bar-stable .buttons-right .list-grid-toggle {
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+      color: #fff;
+      font-size: 12px;
+      font-weight: 200;
+      letter-spacing: 3px;
+      text-align: center;
+      text-shadow: 2px 2px 4px shade(#16a085, 20%);
+      text-transform: uppercase;
+      -webkit-transition: all 0.15s ease 0s;
+      transition: all 0.15s ease 0s;
+      user-select: none; }
+      .bar.bar-stable .buttons-right .list-grid-toggle:hover {
+        background: shade(#16a085, 10%); }
+    .bar.bar-stable .buttons-right .icon {
+      /* .button */
+      display: inline-block;
+      height: auto;
+      width: 35px;
+      margin: 9px 10px 0 0;
+      padding: 0;
+      border: none;
+      background-color: transparent; }
+      .bar.bar-stable .buttons-right .icon::before, .bar.bar-stable .buttons-right .icon::after {
+        display: none; }
+      .bar.bar-stable .buttons-right .icon .icon-bar {
+        position: relative;
+        float: left;
+        height: 4px;
+        width: 100%;
+        margin: 0 0 7px;
+        background: #fff;
+        @inlclude transition(all .15s ease 0s); }
+        .bar.bar-stable .buttons-right .icon .icon-bar:before, .bar.bar-stable .buttons-right .icon .icon-bar:after {
+          position: absolute;
+          display: block;
+          width: 8px;
+          height: 4px;
+          background: #fff;
+          box-shadow: 2px 2px 4px shade(#16a085, 20%);
+          content: '';
+          opacity: 0;
+          transition: all 0.15s ease; }
+        .bar.bar-stable .buttons-right .icon .icon-bar:last-child {
+          margin-bottom: 0; }
+    .bar.bar-stable .buttons-right .grid-icon {
+      width: 8px;
+      margin-right: 25px; }
+      .bar.bar-stable .buttons-right .grid-icon .icon-bar:before, .bar.bar-stable .buttons-right .grid-icon .icon-bar:after {
+        margin: 0 -5px;
+        opacity: 1; }
+      .bar.bar-stable .buttons-right .grid-icon .icon-bar:before {
+        left: 0;
+        -webkit-transform: translateX(-8px);
+        transform: translateX(-8px); }
+      .bar.bar-stable .buttons-right .grid-icon .icon-bar:after {
+        right: 0;
+        -webkit-transform: translateX(8px);
+        transform: translateX(8px); }
 
 .back-button {
   max-height: 60px;
@@ -9986,7 +9985,7 @@ a.button {
   padding: 20px 15px 20px 125px;
   border-top: none;
   border-right: none;
-  border-bottom: 3px solid #fff;
+  border-bottom: 2px solid #fff;
   border-left: none;
   background-color: #1B3255;
   color: #fff; }
@@ -10045,9 +10044,13 @@ ion-tabs .tab-nav {
   width: 100%; }
   .details-page .user-img {
     float: left;
-    width: 100%; }
+    width: 100%;
+    text-align: center; }
     .details-page .user-img img {
       max-width: 100%; }
+      @media (max-width: 480px) {
+        .details-page .user-img img {
+          width: 100%; } }
   .details-page .product-details {
     display: inline-block;
     width: 100%;
